welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var x=0

for (k <- 1 to 10){
  while(estFaceMur==faux){
    avance();
  }
  gauche();
  x=x+1
  
}